load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "crypto.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "signature_cgo.go",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "signature_cgo.go",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "signature_cgo.go",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "signature_cgo.go",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "signature_cgo.go",
        ],
        "@io_bazel_rules_go//go/platform:nacl": [
            "signature_nocgo.go",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "signature_cgo.go",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "signature_cgo.go",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "signature_cgo.go",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "signature_cgo.go",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "signature_cgo.go",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/davidsmd/go-ethereum/crypto",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/davidsmd/go-ethereum/common:go_default_library",
        "//vendor/github.com/davidsmd/go-ethereum/common/math:go_default_library",
        "//vendor/github.com/davidsmd/go-ethereum/crypto/sha3:go_default_library",
        "//vendor/github.com/davidsmd/go-ethereum/rlp:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "//vendor/github.com/davidsmd/go-ethereum/crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//vendor/github.com/davidsmd/go-ethereum/crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//vendor/github.com/davidsmd/go-ethereum/crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//vendor/github.com/davidsmd/go-ethereum/crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//vendor/github.com/davidsmd/go-ethereum/crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl": [
            "//vendor/github.com/btcsuite/btcd/btcec:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//vendor/github.com/davidsmd/go-ethereum/crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//vendor/github.com/davidsmd/go-ethereum/crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//vendor/github.com/davidsmd/go-ethereum/crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//vendor/github.com/davidsmd/go-ethereum/crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//vendor/github.com/davidsmd/go-ethereum/crypto/secp256k1:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = [
        "crypto_test.go",
        "signature_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/davidsmd/go-ethereum/crypto",
    deps = ["//vendor/github.com/davidsmd/go-ethereum/common:go_default_library"],
)
