load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ecies.go",
        "params.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/crypto/ecies",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/ethereum/go-ethereum/crypto:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["ecies_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/ethereum/go-ethereum/crypto/ecies",
    deps = ["//vendor/github.com/ethereum/go-ethereum/crypto:go_default_library"],
)
